--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "spryker/kernel": "^3.30.0",
         "spryker/symfony": "^3.0.0",
         "spryker/url-storage": "^1.6.0",
-        "spryker/urls-rest-api-extension": "^1.0.0"
+        "spryker/urls-rest-api-extension": "^1.0.0",
+        "spryker/transfer": "^3.42.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*"
